--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -53,14 +53,14 @@
     transition: .2s;
   }
   
-  .home_button_github::before {
+  /* .home_button_github::before {
     content: '';
     position: absolute;
     top: -1px; left: -1px; right: -1px; bottom: -1px;
     border-radius: inherit;
     background: linear-gradient(45deg, #D24074, #6518B4);
     z-index: -1;
-  }
+  } */
   
   .home_button_github a {
     text-decoration: none;
@@ -99,12 +99,6 @@
     height: 300px;
     border-radius: 50%;
     z-index: 1;
-    box-shadow: 0px 0px 60px 1px #BF91F9;
+    /* box-shadow: 0px 0px 60px 1px #BF91F9; */
   }
-  
-  @media (max-width: 425px) {
-    .home_content {
-      display: flex;
-      flex-direction: column-reverse;
-    }
-  }
+
