resolução dos problemas

--- a/src/components/Projects/project.module.css
+++ b/src/components/Projects/project.module.css
@@ -2,7 +2,7 @@
 .projects {
     background-color: #0e0d0d;
     margin-top: 30px;
-    height: 180vh;
+    height: auto;
   }
   
   .title_section {
