--- a/src/components/ButtonScrolling/ButtonScrolling.module.css
+++ b/src/components/ButtonScrolling/ButtonScrolling.module.css
@@ -11,6 +11,7 @@
   transition: 0.2s;
   border: none;
 }
+
 .home_button_top:hover{
  opacity: 1;
  transition: 0.2s;
@@ -20,4 +21,13 @@
 .home_button_top a {
   text-decoration: none;
   color: #0e0e0e;
+}
+
+
+@media (max-width: 530px) {
+
+  .home_button_top{
+    display: none;
+  }
+
 }
