--- a/src/components/Experiences/experiences.module.css
+++ b/src/components/Experiences/experiences.module.css
@@ -1,57 +1,84 @@
 /* #experiences */
 .experiences {
-    margin-top: 30px;
-  }
+  margin-top: 30px;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.date {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.sub_title {
+  font-size: 16px;
+  font-weight: 500;
+  color: #bf91f9;
+  margin: 24px 0 32px 0;
+}
+
+.description {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.title_section {
+  font-family: Preahvihear;
+  font-size: 32px;
+  font-weight: 400;
+  color: #bf91f9;
+}
+
+.experiences_nav_list {
+  list-style: none;
+  padding: 0;
+}
+
+.experiences_nav_item {
+  width: 250px;
+  padding: 10px 20px 10px 30px;
+  cursor: pointer;
+  border-left: 2px solid #151515;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.experiences_nav_item:hover {
+  background-color: #0e0e0e;
+  border-left: 2px solid #bf91f9;
+}
+
+.active {
+  background-color: #0e0e0e;
+  border-left: 2px solid #bf91f9;
+}
+
+@media (max-width: 768px) {
   
-  .title {
-    font-size: 24px;
-    font-weight: 500;
+  .experiences {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  
-  .date {
-    font-size: 16px;
-    font-weight: 400;
-  }
-  
-  .sub_title {
-    font-size: 16px;
-    font-weight: 500;
-    color: #BF91F9;
-    margin: 24px 0 32px 0;
-  }
-  
-  .description {
-    font-size: 18px;
-    font-weight: 400;
-  }
-  
+
   .title_section {
-    font-family: Preahvihear;
-    font-size: 32px;
-    font-weight: 400;
-    color: #BF91F9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  
+
   .experiences_nav_list {
-    list-style: none;
-    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  
+
   .experiences_nav_item {
-    width: 250px;
-    padding: 10px 20px 10px 30px;
-    cursor: pointer;
-    border-left: 2px solid #151515;
-    font-size: 18px;
-    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  
-  .experiences_nav_item:hover {
-    background-color: #0E0E0E;
-    border-left: 2px solid #BF91F9;
-  }
-  
-  .active {
-    background-color: #0E0E0E;
-    border-left: 2px solid #BF91F9;
-  }
+}
