--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -1,102 +1,163 @@
 /* #home  */
 
 .home {
-    margin-top: 30px;
+  margin-top: 30px;
+}
+
+.title {
+  font-size: 24px;
+}
+
+.title_section {
+  font-family: Preahvihear;
+  font-size: 32px;
+  font-weight: 400;
+  color: #bf91f9;
+}
+
+.title_name {
+  font-family: Preahvihear;
+  font-size: 64px;
+  color: #bf91f9;
+}
+
+.title_description {
+  font-size: 24px;
+}
+
+.buttons {
+  margin-top: 55px;
+  display: flex;
+  gap: 20px;
+}
+
+.home_button_github {
+  width: 160px;
+  height: 45px;
+  background-color: #bf91f9;
+  border: none;
+  border-radius: 4px;
+  position: relative;
+  padding: 10px 40px 10px 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  transition: 0.2s;
+}
+
+.home_button_github:hover {
+  transform: scale(0.96);
+  transition: 0.2s;
+}
+
+.home_button_github a {
+  text-decoration: none;
+  color: #0b0b0b;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.home_img {
+  width: 400px;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.home_img::before {
+  content: "";
+  position: absolute;
+  top: 55px;
+  left: 55px;
+  right: -1px;
+  bottom: -1px;
+  z-index: -1;
+  background: linear-gradient(40deg, #bf91f9, #bf91f9);
+  filter: blur(60px);
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+}
+
+.home_img img {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.home_section {
+  display: flex;
+}
+
+@media (max-width: 530px) {
+
+  .home_text {
+    width: 100%;
+    align-items: center;
   }
-  
-  .title {
-    font-size: 24px;
-  }
-  
-  .title_section {
-    font-family: Preahvihear;
-    font-size: 32px;
-    font-weight: 400;
-    color: #BF91F9;
-  }
-  
-  .title_name {
-    font-family: Preahvihear;
-    font-size: 64px;
-    color: #BF91F9;
-  }
-  
-  .title_description {
-    font-size: 24px;
-  }
-  
-  .buttons {
-    margin-top: 55px;
+
+  .home_section {
     display: flex;
-    gap: 20px;
+    flex-direction: column-reverse;
   }
-  
-  .home_button_github {
-    width: 160px;
-    height: 45px;
-    background-color: #BF91F9;
-    border: none;
-    border-radius: 4px;
-    position: relative;
-    padding: 10px 40px 10px 40px;
+
+  .title_description {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 15px;
-    transition: .2s;
-  }
-  
-  .home_button_github:hover {
-    transform: scale(.96);
-    transition: .2s;
-  }
-  
-  /* .home_button_github::before {
-    content: '';
-    position: absolute;
-    top: -1px; left: -1px; right: -1px; bottom: -1px;
-    border-radius: inherit;
-    background: linear-gradient(45deg, #D24074, #6518B4);
-    z-index: -1;
-  } */
-  
-  .home_button_github a {
-    text-decoration: none;
-    color: #0B0B0B;
-    font-size: 16px;
-    font-weight: 500;
-  }
-  
-  .home_img {
-    width: 400px;
-    height: 400px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   position: relative;
-  }
-  
-  .home_img::before {
-    content: '';
-    position: absolute;
-    top: 55px;
-    left: 55px;
-    right: -1px;
-    bottom: -1px;
-    z-index: -1;
-    background: linear-gradient(40deg, #BF91F9, #BF91F9);
-    filter: blur(60px);
-    border-radius: 50%;
-    width: 300px;
-    height: 300px;
-  }
-  
-  .home_img img {
-    position: relative;
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    z-index: 1;
-    /* box-shadow: 0px 0px 60px 1px #BF91F9; */
   }
 
+  .title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .title_name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 12px;
+  }
+
+  .home_button_github {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 30px;
+  }
+
+  .home_img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 320px) {
+
+  .home_img::before {
+    display: none;
+  }
+
+  .home_text {
+    text-align: center;
+  }
+
+  .title_name {
+    font-size: 42px;
+  }
+
+}
