--- a/src/components/ButtonScrolling/ButtonScrolling.module.css
+++ b/src/components/ButtonScrolling/ButtonScrolling.module.css
@@ -10,6 +10,7 @@
   width: 40px;
   transition: 0.2s;
   border: none;
+  top: 92vh;
 }
 
 .home_button_top:hover{
@@ -24,10 +25,10 @@
 }
 
 
-@media (max-width: 530px) {
+@media (max-width: 768px) {
 
   .home_button_top{
     display: none;
   }
-
+  
 }
