--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   margin: 30px 0;
   display: flex;
 }
@@ -38,7 +38,6 @@
 }
 
 @media (max-width: 530px) {
-
   .header_menu {
     display: none;
   }
@@ -48,4 +47,146 @@
     z-index: 3;
   }
 
+  .header_menu_list.active {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 0;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 35px;
+    background-color: #bf91f9;
+    width: 200px;
+    height: 300px;
+    z-index: 2;
+    border-radius: 15px;
+    text-transform: uppercase;
+  }
+} */
+
+.header {
+  display: flex;
+  margin: 30px 0;
+}
+
+.header_title {
+  font-family: Preahvihear;
+  color: #bf91f9;
+  font-size: 24px;
+}
+
+.header_menu {
+  display: flex;
+  justify-content: end;
+}
+
+.header_menu_list {
+  display: flex;
+  list-style: none;
+  gap: 50px;
+}
+
+.header_menu_list li {
+  color: #c4c4c4;
+  font-weight: 400;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.header_menu_list li:hover {
+  color: #e5dfdf;
+  transform: scale(0.96);
+  transition: 0.2s;
+}
+
+.hambuger_button {
+  border: none;
+  background: none;
+  font-size: 30px;
+  color: #ffffff;
+  display: none;
+}
+
+.header_menu_list.active {
+  display: none;
+}
+
+@media (max-width: 768px) {
+
+  .hambuger_button {
+    display: block;
+    z-index: 3;
+  }
+
+  .header_menu {
+    z-index: 3;
+  }
+
+  .header_menu_list {
+    display: none;
+    transition: 0.2s;
+  }
+
+  .header_menu_list.active {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 0;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 35px;
+    background-color: #bf91f9;
+    width: 200px;
+    height: 300px;
+    z-index: 2;
+    border-radius: 15px;
+    text-transform: uppercase;
+    transition: 0.2s;
+  }
+
+  .header {
+    justify-content: space-between;
+  }
+
+}
+
+@media (max-width: 425px) {
+
+    .hambuger_button {
+      display: block;
+      z-index: 3;
+      transition: 0.2s;
+    }
+
+    .header_menu {
+      z-index: 3;
+    }
+
+    .header_menu_list {
+      display: none;
+      transition: 0.2s;
+    }
+  
+    .header_menu_list.active {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+      gap: 0;
+      margin: 0;
+      padding: 0;
+      position: absolute;
+      top: 35px;
+      background-color: #bf91f9;
+      width: 200px;
+      height: 300px;
+      z-index: 2;
+      border-radius: 15px;
+      text-transform: uppercase;
+      transition: 0.2s;
+    }
 }
