--- a/src/components/Projects/project.module.css
+++ b/src/components/Projects/project.module.css
@@ -11,7 +11,7 @@
   color: #bf91f9;
 }
 
-@media (max-width: 540px) {
+/* @media (max-width: 540px) {
 
   .title_section {
     display: flex;
@@ -19,4 +19,4 @@
     align-items: center;
   }
 
-}
+} */
